<?xml version="1.0"?>
<package format="2">
  <name>bitbots_buttons</name>
  <version>1.1.0</version>
  <description>The bitbots_buttons package handles actions after pressing buttons on a robot.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>bitbots_msgs</depend>
  <depend>humanoid_league_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <bitbots_documentation>
      <language>python3</language>
      <status>broken</status>
    </bitbots_documentation>
  </export>
</package>
