<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>bitbots_buttons</name>
  <version>1.3.0</version>
  <description>The bitbots_buttons package handles actions after pressing buttons on a robot.</description>

  <maintainer email="5guelden@informatik.uni-hamburg.de">Jasper Güldenstein</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>bitbots_msgs</depend>
  <depend>humanoid_league_msgs</depend>
  <depend>bitbots_docs</depend>


  <exec_depend>message_runtime</exec_depend>
  <export>
      <bitbots_documentation>
      <language>python3</language>
      <status>tested_robot</status>
    </bitbots_documentation>
    <build_type>ament_cmake</build_type>
  </export>

  </package>
