<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>bitbots_ceiling_cam</name>
  <version>1.0.0</version>
  <description>This setups the ceiling cam in the bitbots lab and starts april tag detection</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <license>MIT</license>

  <depend>bitbots_docs</depend>
  <depend>pylon_ros2_camera_wrapper</depend>
  <depend>image_proc</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
     <bitbots_documentation>
      <status>unknown</status>
    </bitbots_documentation>
    <build_type>ament_cmake</build_type>
  </export>
</package>
