<?xml version="1.0"?>
<package>
  <name>bitbots_cm730</name>
  <version>1.0.0</version>
  <description>The bitbots_cm730 package provides a ROS interface for the CM-730 board, developed by Robotis.
  The node communicates with the board via USB to send commands to the servos and to get their current position.
  </description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>bitbots_common</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>humanoid_league_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>bitbots_common</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>humanoid_league_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>bitbots_common</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
    <bitbots_documentation>
      <language>c++</language>
      <status>unknown</status>
    </bitbots_documentation>
  </export>
</package>
