<?xml version="1.0"?>
<package>
  <name>bitbots_common</name>
  <version>1.0.0</version>
  <description>The bitbots_common package is a collection of util classes used in many ROS packages from
  the Hamburg Bit-Bots.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>humanoid_league_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bitbots_ros_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>humanoid_league_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>bitbots_ros_control</run_depend>

  <export>
  </export>
</package>
