<?xml version="1.0"?>
<package>
    <name>bitbots_connector</name>
    <version>0.0.0</version>
    <description>The bitbots_connector is used to share information
        between the different classes in the behaviour. It consists
        of several capsules each for there own purpose. For example
        there is a team_data_capsule dealing with messages received
        from other robots, a world_model_capsule containing various
        information about objects (balls, goals) on the field and a
        blackboard capsule containing general information about the
        state of actions or perceptions by the robot.
    </description>

    <maintainer email="7engelke@informatik.uni-hamburg.de">Timon Engelke</maintainer>
    <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>humanoid_league_msgs</build_depend>
    <build_depend>rospy</build_depend>

    <run_depend>humanoid_league_msgs</run_depend>
    <run_depend>rospy</run_depend>

    <export>
        <bitbots_documentation>
            <status>compiles</status>
            <language>python2</language>
        </bitbots_documentation>
    </export>
</package>
